# routes/product.js
@@ -7,4 +7,6 @@ const productController = require('../controllers/productsController');
 
 router.get('/', productController.products);
 
+router.post('/create',productController.create);
+
 module.exports = router;
